# pdf_rag

./: .env.example  .gitignore  README.md  app.py  chainlit.md  chat_pdf.py  create_embeddings.py  main.py  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  pyproject.toml
api/: index.py
api/utils/: attachment.py  prompt.py  tools.py
app/: globals.css  icons.tsx  layout.tsx
app/og/: route.tsx
app/sign-in/[[...sign-in]]/: page.tsx
components/: chat.tsx  icons.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  navbar.tsx  overview.tsx  preview-attachment.tsx  weather.tsx
hooks/: use-scroll-to-bottom.tsx
lib/: utils.ts
